trunk/Archive2/12/73c4e8171b6928/output
main.cpp:36:14: error: cannot initialize a variable of type 'float **' with an rvalue of type 'float (*)[5]'
    float ** p = new float[n][5];
             ^   ~~~~~~~~~~~~~~~
1 error generated.
